erDiagram
    employees ||--o{ assignments : "所属する"
    employees ||--o{ employee_roles : "ロールを持つ"
    employees ||--o| employee_credentials : "認証情報"
    employees ||--o{ managerships : "部署長を務める"
    departments ||--o{ assignments : ""
    departments ||--o{ managerships : ""
    departments ||--o{ departments : "親子"

    employees {
        uuid id PK
        varchar employee_number "在籍者の間で一意。認証IDを兼ねる"
        varchar name "氏名"
        varchar email "在籍者の間で小文字一意"
        date hired_on "入社日"
        date retired_on "NULL は在籍中"
        bigint version "楽観ロック"
        timestamptz created_at "DB の now()"
        timestamptz updated_at "トリガで自動更新"
    }
    employee_credentials {
        uuid employee_id PK "employees への FK"
        varchar password_hash "BCrypt 60文字。形式を CHECK"
        timestamptz password_changed_at "最終変更日時"
    }
    employee_roles {
        uuid employee_id PK "employees への FK"
        varchar role PK "EMPLOYEE / HR / ADMIN"
        timestamptz granted_at "付与日時"
    }
    departments {
        uuid id PK
        varchar code "現存部署の間で一意"
        varchar name "部署名"
        uuid parent_id FK "NULL はルート。循環はトリガで拒否"
        date abolished_on "NULL は現存"
        bigint version "楽観ロック"
        timestamptz created_at ""
        timestamptz updated_at ""
    }
    assignments {
        uuid id PK
        uuid employee_id FK "社員"
        uuid department_id FK "配属先"
        date valid_from "適用開始日"
        date valid_to "NULL は無期限。半開区間"
        bigint version "楽観ロック"
        timestamptz created_at ""
        timestamptz updated_at ""
    }
    managerships {
        uuid id PK
        uuid department_id FK "対象部署"
        uuid employee_id FK "部署長。兼任可"
        date valid_from "就任日"
        date valid_to "NULL は現任"
        bigint version "楽観ロック"
        timestamptz created_at ""
        timestamptz updated_at ""
    }
